--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/new.css" rel="stylesheet" />
     </head>
 
     <body id="page-top">
@@ -27,7 +28,7 @@
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
+                        <h1 class="mx-auto my-0 text-uppercase">Data simulation</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
                         <a class="btn btn-primary" href="#about">Get Started</a>
                     </div>
@@ -40,15 +41,15 @@
             <div class="container px-4 px-lg-5 d-flex">
                 <a class="navbar-brand" href="#page-top"><i class="fas fa-arrow-up"></i></a>
                 <ul class="navbar-nav">    
-                    <li class="nav-item"><a class="nav-link" href="#about">1. Obtención de datos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#projects">2. Espacio de posibles soluciones</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#signup">Conclusiones</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#data">1. Obtención de datos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#espacio">2. Espacio de posibles soluciones</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#conclusiones">Conclusiones</a></li>
                 </ul>
             </div>
         </nav>
 
         <!-- About-->
-        <section class="about-section text-center" id="about">
+        <section class="about-section text-center" id="data">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
@@ -60,7 +61,8 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <div class="modelos"><iframe src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/' frameborder='0' width='100%' height='600px'></iframe><div class="censor"></div></div>
+                
             </div>
         </section>
 
@@ -70,7 +72,7 @@
 
 
         <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        <section class="projects-section" id="espacio">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
@@ -115,7 +117,7 @@
             </div>
         </section>
         <!-- Signup-->
-        <section class="signup-section" id="signup">
+        <section class="signup-section" id="conclusiones">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
