--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
                     <div class="col-lg-8">
                         <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
                         <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
+                            Grayscale is a free Bootstrap theme ceeeated by Start Bootstrap. It can be yours right now, simply download the template on
                             <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
                             The theme is open source, and you can use it for any purpose, personal or commercial.
                         </p>
                     </div>
                 </div>
-                <div class="modelos"><iframe src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/' frameborder='0' width='100%' height='600px'></iframe><div class="censor"></div></div>
+                <div class="modelos"><iframe src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/' frameborder='0' width='100%' height='650px'></iframe></div>
                 
             </div>
         </section>
@@ -76,7 +76,7 @@
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>fuijksdfkjfkdsisdkdskdk
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Shoreline</h4>
