--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
+                        <h2 class="text-white mb-4">Prueba</h2>
                         <p class="text-white-50">
                             Grayscale is a free Bootstrap theme ceeeated by Start Bootstrap. It can be yours right now, simply download the template on
                             <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
@@ -61,7 +61,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="modelos"><iframe src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/' frameborder='0' width='100%' height='650px'></iframe></div>
+                <div class="modelos">
+                    <iframe class="iframe_Modelos" src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/' frameborder='0' ></iframe>
+                </div>
                 
             </div>
         </section>
@@ -72,15 +74,15 @@
 
 
         <!-- Projects-->
-        <section class="projects-section" id="espacio">
+        <section class="projects-section" id="projects">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>fuijksdfkjfkdsisdkdskdk
+                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <p class="text-white-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
                         </div>
                     </div>
                 </div>
