--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
 
         <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
 
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
@@ -49,22 +50,102 @@
         </nav>
 
         <!-- About-->
-        <section class="about-section text-center" id="data">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Prueba</h2>
-                        <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme ceeeated by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
+        <section class="about-section" id="data">
+
+            <!-- Urban Data Eye-->
+            <div class="container px-4 px-lg-5 mb-5" >
+                <div class="row">
+                    <div class="col-sm-3 titulo_modelo">
+                        <h5>Urban Data Eye</h5>
+                    </div>
+                    <div class="col-sm descripcion_modelo">
+                        <p>
+                            Descripción
+                            <a href="#">Link.</a>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, facere ipsum! Unde rerum animi
+                            nihil similique molestiae excepturi quia illo et enim nam. Eius sequi consequuntur cumque vel eos
+                            laboriosam!
                         </p>
                     </div>
                 </div>
-                <div class="modelos">
-                    <iframe class="iframe_Modelos" src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/' frameborder='0' ></iframe>
+                <div class="row">
+                    <div class="col modelos">
+                        <iframe class="iframe_Modelos" src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/'
+                            frameborder='0'></iframe>
+                    </div>
                 </div>
-                
+            </div>
+
+            <!-- Barrios-->
+            <div class="container px-4 px-lg-5 mb-5">
+                <div class="row">
+                    <div class="col-sm-3 titulo_modelo">
+                        <h5>Barrios</h5>
+                    </div>
+                    <div class="col-sm descripcion_modelo">
+                        <p>
+                            Descripción
+                            <a href="#">Link.</a>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, facere ipsum! Unde rerum animi
+                            nihil similique molestiae excepturi quia illo et enim nam. Eius sequi consequuntur cumque vel eos
+                            laboriosam!
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col modelos">
+                        <iframe class="iframe_Modelos" src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/'
+                            frameborder='0'></iframe>
+                    </div>
+                </div>
+            </div>
+
+            <!-- INE-->
+            <div class="container px-4 px-lg-5 mb-5">
+                <div class="row">
+                    <div class="col-sm-3 titulo_modelo">
+                        <h5>INE</h5>
+                    </div>
+                    <div class="col-sm descripcion_modelo">
+                        <p>
+                            Descripción
+                            <a href="#">Link.</a>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, facere ipsum! Unde rerum animi
+                            nihil similique molestiae excepturi quia illo et enim nam. Eius sequi consequuntur cumque vel eos
+                            laboriosam!
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col modelos">
+                        <iframe class="iframe_Modelos" src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/'
+                            frameborder='0'></iframe>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Cookies-->
+            <div class="container px-4 px-lg-5 mb-5">
+                <div class="row">
+                    <div class="col-sm-3 titulo_modelo">
+                        <h5>INE</h5>
+                    </div>
+                    <div class="col-sm descripcion_modelo">
+                        <p>
+                            Descripción
+                            <a href="#">Link.</a>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores, facere ipsum! Unde rerum animi
+                            nihil similique molestiae excepturi quia illo et enim nam. Eius sequi consequuntur cumque vel eos
+                            laboriosam!
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col modelos">
+                        <iframe class="iframe_Modelos" src='https://my.spline.design/untitled-d63cd9d6dfd9ab5e22e1ef17469042ac/'
+                            frameborder='0'></iframe>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -74,7 +155,7 @@
 
 
         <!-- Projects-->
-        <section class="projects-section" id="projects">
+        <section class="projects-section" id="espacio">
             <div class="container px-4 px-lg-5">
                 <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
