--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
-                <div class="d-flex justify-content-center">
-                    <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Data simulation</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-                        <a class="btn btn-primary" href="#about">Get Started</a>
-                    </div>
+        <header class="projects-section">
+            <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-cente">
+                <div class="row">
+                        <h1 class="col mx-auto my-0 text-uppercase">Data simulation</h1>
+                        <h2 class="col text-white-50 mx-auto mt-2 mb-5">Casos de estudio.</h2>
+                </div>
+                <div class="row">
+                        <p class="col">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus voluptatum eaque magni similique vel nemo?</p>
                 </div>
             </div>
         </header>
