--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         
 
-        <div class="projects-section">
+        <div>
             <div class="container">
 
                 <!-- 
@@ -46,7 +46,9 @@
                 </div>
 
                 <div class="row ">
-                    <div class="col-sm mb-5" style="background-image: url('https://miro.medium.com/max/1200/1*RQ4ByD7Iy48Eb7S6JS4A9A.jpeg'); 
+                    <div class="col-sm mb-5" style="background-image: url('https://alchetron.com/cdn/john-frazer-architect-12f9f36c-349d-4621-a779-ce0753d0bbc-resize-750.jpeg');
+                    background-size: cover;
+                    background-repeat: no-repeat; 
                     height: 30vh;">
                     </div>
                 </div>
