--- a/index.html
+++ b/index.html
@@ -123,24 +123,25 @@
                 <div class="row">
                     <div class="col">
                         <div class="row">
-                            <div class="col" style="background-image: url('https://mdbootstrap.com/img/new/standard/city/041.jpg'); 
-                                            height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-                            <div class="col" style="background-image: url('https://mdbootstrap.com/img/new/standard/city/041.jpg'); 
-                                            height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-                            <div class="col" style="background-image: url('https://mdbootstrap.com/img/new/standard/city/041.jpg'); 
-                                            height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-                            <div class="col" style="background-image: url('https://mdbootstrap.com/img/new/standard/city/041.jpg'); 
-                                            height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
+                            
+                            <a href="#urbanDataEye" class="col" style="background-image: url('assets/img/ude.png'); 
+                                            height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></a>
+                            <a href="#barrios" class="col" style="background-image: url('assets/img/barrios.png'); 
+                                            height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></a>
+                            <a href="#ine" class="col" style="background-image: url('assets/img/ine.png'); 
+                                            height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></a>
+                            <a href="#cookies" class="col" style="background-image: url('assets/img/cookies.png'); 
+                                            height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></a>
                         </div>
                         <div class="row">
-                            <div class="col" style="background-image: url('https://mdbootstrap.com/img/new/standard/city/041.jpg'); 
-                                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-                            <div class="col" style="background-image: url('https://mdbootstrap.com/img/new/standard/city/041.jpg'); 
-                                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-                            <div class="col" style="background-image: url('https://mdbootstrap.com/img/new/standard/city/041.jpg'); 
-                                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
-                            <div class="col" style="background-image: url('https://mdbootstrap.com/img/new/standard/city/041.jpg'); 
-                                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></div>
+                            <a href="#dress" class="col" style="background-image: url('assets/img/learning\ to\ dress.jpg'); 
+                                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></a>
+                            <a href="#locomotion" class="col" style="background-image: url('assets/img/flexible\ muscle\ based\ locomotion.jpg'); 
+                                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></a>
+                            <a href="#generator" class="col" style="background-image: url('assets/img/generator.jpeg'); 
+                                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></a>
+                            <a href="#universal" class="col" style="background-image: url('assets/img/universal\ constructor2.png'); 
+                                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;"></a>
                         </div>
                     </div>
                 
