--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p class="texto">El formato web o hipermedia de este artículo obliga a transformar los casos de estudio y su representación en datos, unidades de información basados en números. Todas las imágenes, textos y modelos se encuentran en un repositorio de código que puede ser descargado y modificado.</p>
                     </div>
                     <div class="col-sm mb-5">
-                        <iframe src="https://raw.githubusercontent.com/data-simulation/data-simulation.github.io/main/index.html" frameborder="0" style="width: 100%;height: 100%;overflow:hidden;min-height: 500px;overflow-y: hidden;"></iframe>
+                        <iframe src="github.html" frameborder="0" style="width: 100%;height: 100%;overflow:hidden;min-height: 500px;overflow-y: hidden;"></iframe>
                     </div>
         
                 </div>
