--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                         <br>
                         <p class="texto">El formato web o hipermedia de este artículo obliga a transformar los casos de estudio y su representación en datos, unidades de información basados en números. Todas las imágenes, textos y modelos se encuentran en un repositorio de código que puede ser descargado y modificado.</p>
                     </div>
-                    <div class="col-sm mb-5">
-                        <iframe src="github.html" frameborder="0" style="width: 100%;height: 100%;overflow:hidden;min-height: 500px;overflow-y: hidden;"></iframe>
+                    <div class="col-sm mb-5" style="overflow:hidden">
+                        <iframe src="codigo.html" frameborder="0" style="width: 100%;height: 100%;overflow:hidden;min-height: 500px;overflow-y: hidden;"></iframe>
                     </div>
         
                 </div>
