--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
 
                 <div class="row">
                     <div class="col-sm mb-5" style="padding-right: 5%;">
-                        <p class="texto">Los datos son la base de cualquier proceso de trabajo con Inteligencia artificial, aunque se le dé más importancia a los algoritmos. De nada sirve el algoritmo de TikTok si una persona no usa la aplicación y genera datos con sus likes y visualizaciones.</p>
-                        <p class="texto">Transformar la realidad en datos permite generar una simulación donde los algoritmos funcionen.</p>
+                        <p class="texto">Los <code>datos</code> son la base de cualquier proceso de trabajo con Inteligencia artificial, aunque se le dé más importancia a los algoritmos. De nada sirve el algoritmo de TikTok si una persona no usa la aplicación y genera datos con sus likes y visualizaciones.</p>
+                        <p class="texto">Transformar la realidad en datos permite generar una <code>simulación</code> donde los algoritmos funcionen.</p>
                         <br>
                         <p class="texto">Esta investigación es parte de un proceso más largo a desarrollar en un trabajo fin de máster para entender cómo afectan los datos tanto al proceso creativo como a la relación con el entorno.</p>
                         <br>
-                        <p class="texto">El formato web o hipermedia de este artículo obliga a transformar los casos de estudio y su representación en datos, unidades de información basados en números. Todas las imágenes, textos y modelos se encuentran en un repositorio de código que puede ser descargado y modificado.</p>
+                        <p class="texto">El <code>formato web</code> o <code>hipermedia</code> de este artículo obliga a transformar los casos de estudio y su representación en datos, unidades de información basados en números. Todas las imágenes, textos y modelos se encuentran en un repositorio de código que puede ser descargado y modificado.</p>
                         <br>
                         <!-- Place this tag where you want the button to render. -->
                         <a class="github-button" href="https://github.com/data-simulation/data-simulation.github.io" data-size="large" data-show-count="true" aria-label="Star data-simulation/data-simulation.github.io on GitHub" >Github</a>
@@ -277,26 +277,24 @@
                     <div class="col-sm mb-5">
                         <h3><code>Técnica</code> </h3>
                         <br>
-                        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>Los diferentes ejemplos hacen uso de diferentes métodos y herramientas para transformar información, totalmente ligadas a su contexto físico y temporal. </p>
+                        <br>
+                        <p>Contrasta el uso de cámaras de seguridad y algoritmo de detección de peatones del Urban Data Eye frente al trabajo a pie de calle realizando encuestas o apuntando los datos con papel y boli de la investigación Gran San Blas. El primero es más capaz de procesar grandes cantidades de datos que el otro, pero el segundo es más rico en detalles y preciso.</p>
                     </div>
                 </div>
 
                 <div class="row px-4 px-lg-5 mb-5">
-                    <div class="col mb-5" style="background-image: url('assets/img/barriosData.png'); 
+                    <div class="col mb-5" style="background-image: url('assets/img/udeTecnica.gif'); 
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
                     </div>
-                    <div class="col mb-5" style="background-image: url('assets/img/udeTecnica.gif'); 
+                    <div class="col mb-5" style="background-image: url('assets/img/barriosData.png'); 
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
                     </div>
                 </div>
 
                 <div class="row px-4 px-lg-5 mb-5">
                     <div class="col-sm mb-5 pl-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>El estudio del INE y las cookies son también ejemplos de datificación a gran escala pero lo interesante es que convivimos en nuestro día a día con estos procesos cada vez que usamos el móvil y el ordenador.</p>
                     </div>
                 </div>
 
@@ -317,26 +315,24 @@
                     <div class="col-sm mb-5">
                         <h3><code>Tratamiento de los datos</code> </h3>
                         <br>
-                        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>Los datos en si ya pueden servir como análisis y ofrecer resultados pero en muchos casos al cruzar los datos se obtienen nuevos datos que pueden mostrar otras realidades</p>
+                        <br>
+                        <p>Por ejemplo, en las cuatro situaciones se pueden obtener datos agregados, es decir, datos que son producto de la suma del resto y que pueden indicar mapas de calor del uso de una plaza, flujos de personas o tendencias de la web.</p>
                     </div>
                 </div>
 
                 <div class="row px-4 px-lg-5 mb-5">
-                    <div class="col mb-5" style="background-image: url('assets/img/barriosTratamiento.png'); 
+                    <div class="col mb-5" style="background-image: url('assets/img/udeTratamiento.png'); 
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
                     </div>
-                    <div class="col mb-5" style="background-image: url('assets/img/udeTratamiento.png'); 
+                    <div class="col mb-5" style="background-image: url('assets/img/barriosTratamiento.png'); 
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
                     </div>
                 </div>
 
                 <div class="row px-4 px-lg-5 mb-5">
                     <div class="col-sm mb-5 pl-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>Estos nuevos datos en muchos casos requieren de algoritmos para su producción ya que trabajan con grandes bases de datos. Al aumentar la cantidad de datos el algoritmo tiene más fácil el aprendizaje y sobretodo, tiene acceso a datos que un ser humano por si solo no puede leer.</p>
                     </div>
                 </div>
 
@@ -356,9 +352,12 @@
                     <div class="col-sm mb-5">
                         <h3><code>Ética</code> </h3>
                         <br>
-                        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>Desde 2007 Google Maps difumina todas las caras que captan sus cámaras para evitar cualquier problema de <code>protección de datos</code>. Los análisis de la revista Arquitectura sorprenden por el uso de nombres generales como <code>"una chica de 12 años"</code> o <code>"un portero"</code>  para que fuese anónimo y que a la vez se muestre las caras sin nigún tipo de censura.</p>
+                        <br>
+                        <p>Los cuestionarios están claramente sesgados por el pensamiento de la época y limitados por la muestra estudiada. Consideran que entrevistando a 100 personas en 33 bloques de un total de 76 se obtiene una muestra suficiente para analizar un barrio. Además existe la limitación metodológica de las personas que se niegan a responder. </p>
+                        <br>
+                        <p>El estudio se plantea <code>“¿Hasta qué punto la opinión de los que no quieren responder no es más interesante y significativa que la opinión de los que responden?”</code> .
+                        </p>
                     </div>
                 </div>
 
@@ -367,6 +366,23 @@
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
                     </div>
                     <div class="col mb-5" style="background-image: url('assets/img/udeEtica.png'); 
+                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
+                    </div>
+                </div>
+
+                <div class="row px-4 px-lg-5 mb-5">
+                    <div class="col-sm mb-5 pl-3">
+                        <p>Los estudios del INE levantaron muchas polémicas cuando se dió la noticia de que se iban a realizar por la privacidad de los movimientos de cada persona y los posibles usos maliciosos que se le pueden dar. El INE dejó claro que estos datos son agregados y por tanto responden a <code>movimientos generales de la población</code> y no de usuarios concretos</p>
+                        <br>
+                        <p>En cambio, el ejemplo de las cookies si que derivó en problemas mayores cuando en 2018 se levanto la primera demanda federal en EEUU contra Facebook por violaciones de privacidad en el caso de <code>Cambridge Analytica</code> mostrando hasta que punto afectan a la realidad el uso de las cookies.</p>
+                    </div>
+                </div>
+
+                <div class="row px-4 px-lg-5 mb-5">
+                    <div class="col mb-5" style="background-image: url('assets/img/ineEtica.jpeg'); 
+                    height: 30vh;background-repeat: repeat;background-size: contain;background-position: center;">
+                    </div>
+                    <div class="col mb-5" style="background-image: url('assets/img/cookiesEtica.jpeg'); 
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
                     </div>
                 </div>
@@ -488,9 +504,7 @@
                     <div class="col-sm mb-5">
                         <h3><code>Simulación</code> </h3>
                         <br>
-                        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p class="texto"></p>
                     </div>
                 </div>
 
