--- a/index.html
+++ b/index.html
@@ -504,7 +504,9 @@
                     <div class="col-sm mb-5">
                         <h3><code>Simulación</code> </h3>
                         <br>
-                        <p class="texto"></p>
+                        <p>Las simulaciones son modelos que replican entornos y comportamientos de la realidad. Definen un marco en el que los algoritmos pueden moverse y entrenarse. Estos entornos deben definirse siempre matemáticamente.</p>
+                        <br>
+                        <p>En muchos casos son reflejo de las leyes de la naturaleza como la gravedad o las colisiones de sólidos. En los papers Learning to dress y Flexible Muscle-Based Locomotion se simula la realidad los más fielmente posible en aquellos aspectos que permitan a los robots realiazar sus tareas.</p>
                     </div>
                 </div>
 
@@ -521,14 +523,14 @@
 
                 <div class="row px-4 px-lg-5 mb-5">
                     <div class="col-sm mb-5 pl-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>Los proyectos arquitectónicos también pueden ser simulados antes de su construcción, no solo para su visualización como en los programas de CAD sino para que formen parte de la toma de decisiones.</p>
+                        <p>El Generator plantea una malla tridimensional sobre la que se disponen los módulos y sirve como tablero sobre el que se configura el edificio. Al igual que ocurre con las personas, cuanto mayor sea la definición del contexto en la simulación mejor será la toma de decisiones.</p>
+                        <p>El Universal Constructor plantea una simulación entre el mundo virtual y el real al utilizar un ordenador modulado en celulas autónomas que se pueden reconfigurar dentro de la matriz de posibilidades.</p>
                     </div>
                 </div>
 
                 <div class="row px-4 px-lg-5 mb-5">
-                    <div class="col mb-5" style="background-image: url('assets/img/generatorSimulation.jpeg'); 
+                    <div class="col mb-5" style="background-image: url('assets/img/generatorReglas.jpeg'); 
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
                     </div>
                     <div class="col mb-5" style="background-image: url('assets/img/universalSimulation.png'); 
@@ -570,7 +572,7 @@
                 </div>
 
                 <div class="row px-4 px-lg-5 mb-5">
-                    <div class="col mb-5" style="background-image: url('assets/img/generatorReglas.jpeg'); 
+                    <div class="col mb-5" style="background-image: url('assets/img/generatorSimulation.jpeg'); 
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: left;">
                     </div>
                     <div class="col mb-5" style="background-image: url('assets/img/universalLimite.png'); 
