--- a/index.html
+++ b/index.html
@@ -546,9 +546,9 @@
                     <div class="col-sm mb-5">
                         <h3><code>Reglas</code> </h3>
                         <br>
-                        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>Más allá de los condicionantes que son implicitos a la simulación, en muchos casos es necesario plantear unas reglas para limitar el rango de acción del algoritmo. Los propios datos obtenidos con anterioridad pueden definir reglas que permitan o no ciertas soluciones.</p>
+                        <br>
+                        <p>Los músculos, la forma y tamaño de las extremidades o los obstaculos son necesarios en los dos primeros ejemplos. Modificando estas reglas a lo largo de la evolución del algoritmo se puede generar la base de datos que necesita el modelo y no existe.</p>
                     </div>
                 </div>
 
@@ -565,9 +565,8 @@
 
                 <div class="row px-4 px-lg-5 mb-5">
                     <div class="col-sm mb-5 pl-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>Cedric Price propone un sistema de reglas para la reconfiguración de los modulos, una serie de plantillas que miden la compatibilidad entre los usos que considera cada usuario.</p>
+                        <p>En el Universal Generator se plantea algo parecido pero buscando que la codificación de cada celula corresponda a un movimiento de coreografías en la notación de Laban</p>
                     </div>
                 </div>
 
@@ -589,9 +588,9 @@
                     <div class="col-sm mb-5">
                         <h3><code>El algoritmo</code></h3>
                         <br>
-                        <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p class="texto">La simulacióbn podría recoger todos los datos existentes en los entornos reales para así ser lo más precisa posible pero debido a limitaciones técnicas, deben ajustarse a las necesidades del algoritmo.</p>
+                        <br>
+                        <p>El algoritmo debe comunicarse con la simulación y saber que factores son los más importantes y tendrán más peso en la ecuación final. Para que el algoritmo pueda aprender se definen una serie de recompensas para que este sepa cuando va por el camino correcto. Estas recompensas estarán definidas por un objetivo.</p>
                     </div>
                 </div>
 
@@ -599,7 +598,7 @@
 
                 <div class="row px-4 px-lg-5 mb-5">
                     <div class="col mb-5" style="background-image: url('assets/img/dressAlgoritmo.png'); 
-                    height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: left;">
+                    height: 30vh;background-repeat: no-repeat;background-size: cover;">
                     </div>
                     <div class="col mb-5" style="background-image: url('assets/img/walkingalgoritmo.png'); 
                     height: 30vh;background-repeat: no-repeat;background-size: cover;background-position: center;">
@@ -608,9 +607,7 @@
 
                 <div class="row px-4 px-lg-5 mb-5">
                     <div class="col-sm mb-5 pl-3">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente laborum quo dicta esse dolor
-                            dolorem distinctio aliquam iste nobis expedita dignissimos, consectetur debitis repellendus
-                            voluptatum eaque magni similique vel nemo?</p>
+                        <p>Los algoritmos de los dos últimos ejemplos muestran acercamientos parecidos, la reconfiguración de unos módulos en una matriz, pero sus objetivos son muy distintos. Sus algoritmos son menos potentes ya que no usan machine learning, es decir, que el algoritmo no evoluciona.</p>
                     </div>
                 </div>
 
