--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
                 </div>
                 <div class="row">
                     <div class="col modelos">
-                        <iframe class="iframe_Modelos" src='https://my.spline.design/04cookies-22dc29e5c1460fc1e94d1762cd286998/'
-                            frameborder='0'></iframe>
+                        <iframe class="iframe_Modelos" src='https://vasturiano.github.io/3d-force-graph/example/basic/'
+                            frameborder='0' style="filter: grayscale(100%) contrast(110%);"></iframe>
                     </div>
                 </div>
             </div>
