--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>data---simulation</title>
+        <title>---data---simulation---</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 
         <!-- Font Awesome icons (free version)-->
@@ -29,6 +29,18 @@
         document.addEventListener('DOMContentLoaded', function () {
         cookieconsent.run({"notice_banner_type":"interstitial","consent_type":"express","palette":"dark","language":"es","page_load_consent_levels":["strictly-necessary"],"notice_banner_reject_button_hide":false,"preferences_center_close_button_hide":false,"website_name":"data-simulation"});
         });
+        </script>
+
+        <script>
+            setInterval(mycode, 200)
+            function mycode() {
+                const webTitle = document.title.split("")
+                webTitle.push(webTitle.shift())
+                const newTitle = webTitle.join("")
+                document.title = newTitle
+            }
+
+            mycode()
         </script>
 
         <noscript>Cookie Consent by <a href="https://www.termsfeed.com/privacy-policy-generator/" rel="nofollow noopener">TermsFeed Generator</a></noscript>
