--- a/simulation/index.html
+++ b/simulation/index.html
@@ -154,12 +154,7 @@
     <!-- #3 DATOS EN BRUTO -->
     
     <div id="datos">
-        <iframe id="inlineFrameExample"
-            title="Inline Frame Example"
-            width="300"
-            height="200"
-            src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
-        </iframe>
+        <iframe class="webViewer" src="assets/1.html" frameborder="0">
     </iframe></div>
 
     <!-- #4 CÓDIGO -->
