--- a/simulation/videos.html
+++ b/simulation/videos.html
@@ -49,7 +49,7 @@
             <div class="columnVideos">
                 <div class="video-container">
                     <video autoplay muted loop>
-                        <source src="assets/pajaros.mp4" />
+                        <source src="assets/cocheper.mp4" />
                     </video>
                 </div>
             </div>
@@ -57,7 +57,7 @@
             <div class="columnVideos">
                 <div class="video-container">
                     <video autoplay muted loop>
-                        <source src="assets/pajaros.mp4" />
+                        <source src="assets/calle.mp4" />
                     </video>
                 </div>
             </div>
@@ -69,7 +69,7 @@
             <div class="columnVideos">
                 <div class="video-container">
                     <video autoplay muted loop>
-                        <source src="assets/pajaros.mp4" />
+                        <source src="assets/coches.mp4" />
                     </video>
                 </div>
             </div>
@@ -77,7 +77,7 @@
             <div class="columnVideos">
                 <div class="video-container">
                     <video autoplay muted loop>
-                        <source src="assets/pajaros.mp4" />
+                        <source src="assets/persona.mp4" />
                     </video>
                 </div>
             </div>
@@ -85,7 +85,7 @@
             <div class="columnVideos">
                 <div class="video-container">
                     <video autoplay muted loop>
-                        <source src="assets/pajaros.mp4" />
+                        <source src="assets/plaza.mp4" />
                     </video>
                 </div>
             </div>
