--- a/simulation/index.html
+++ b/simulation/index.html
@@ -42,7 +42,7 @@
 
             <div id="infoPanel0">
                 <br>
-                <p>Diagrama</p>
+                <p>carolina</p>
                 <br>
                 <p>diagrama</p>
                 <br>
