--- a/simulation/index.html
+++ b/simulation/index.html
@@ -36,7 +36,7 @@
     <div id="controlPanel">
         <div id="headPanel">   
             <div id="numeroPanel"><p>0</p></div>
-            <div id="tituloPanel"><p>Diagrama</p></div>
+            <div id="tituloPanel"><p>Metodología</p></div>
         </div>
         <div id="infoPanel">
 
